feat: add properties and datas in project

--- a/src/app/components/card/card-label/card-label.component.html
+++ b/src/app/components/card/card-label/card-label.component.html
@@ -1,5 +1,7 @@
 <div class="card-label__container">
+
     <div class="card-label__content">
-        <p class="card-label__content__title">EXCLUSIVE</p>
+        <p class="card-label__content__title">{{label}}</p>
     </div>
+
 </div>
