--- a/src/app/components/card/card-pricing/card-pricing.component.html
+++ b/src/app/components/card/card-pricing/card-pricing.component.html
@@ -1,18 +1,21 @@
 <div class="card-pricing__container">
+
     <div class="card-pricing__content">
+
         <div class="card-pricing__content__title">
             <h3>Play it Now !</h3>
         </div>
+
         <div class="card-pricing__content__game-informations">
             <span class="card-pricing__content__game-informations__icon">|</span>
-            <p>Digital Game</p>
-            <div class="card-pricing__content__game-informations__plataform">
-                <p><span>|</span> PS3</p>
-                <p><span>|</span> PS4</p>
-            </div>
+            <p>{{type}}</p>
+            <p class="card-pricing__content__game-informations__plataform" *ngFor="let plataform of plataforms"><span> | </span> {{plataform}}</p>
         </div>
+
     </div>
+
     <div class="card-pricing__price">
-        <h2>$ 599.90</h2>
+        <h2>{{price}}</h2>
     </div>
+
 </div>
