--- a/src/app/components/menu-bar/menu-bar-item/menu-bar-item.component.html
+++ b/src/app/components/menu-bar/menu-bar-item/menu-bar-item.component.html
@@ -2,6 +2,6 @@
     <ul class="menu-bar-item__container__list">
         <li><a href="http://www.linkedin.com/in/matheus-de-oliveira-sá/">Linkedin</a></li>
         <li><a href="https://github.com/MatheusOliveira04">Github</a></li>
-        <li><a href="https://github.com/MatheusOliveira04">This project</a></li>
+        <li><a href="https://github.com/MatheusOliveira04/angular-psn-store">This project</a></li>
     </ul>
 </div>
