--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,7 +1,7 @@
 .card__container {
     position: relative;
-    width: 450px;
-    height: 600px;
+    width: 30vw;
+    height: 88vh;
     border: 2px solid black;
     overflow: hidden;
     margin-bottom: 20px;
